# regmach

./: .gitignore  Cargo.toml  Makefile  readme.org  rustfmt.toml
browser/: Cargo.toml  build.sh  index.html
browser/shaders/: basic-shader.fs  basic-shader.vs  font-shader.fs  font-shader.vs  grid-shader.fs  grid-shader.vs
browser/src/: browser_display.rs  camera.rs  com.rs  font_mesh.rs  font_mgr.rs  gl_util.rs  glyph.rs  grid.rs  lib.rs  main_func.rs  mesh.rs  space_hash.rs  start.rs  text.rs  types.rs
linux/: Cargo.toml
linux/src/: lib.rs  linux_display.rs  linux_display_opengl.rs  types.rs  vertex_shaders.rs
media/design/: arch.xoj  arch2.xoj  camera.xoj  degenerate-triangle-optimization.xoj  font-optimization.xoj
regmach/: Cargo.toml
regmach/src/: lib.rs  linux.rs  main.rs
regmach/src/dsp/: colors.rs  dsp_point.rs  linux_display_opengl.rs  properties.rs  segment.rs  types.rs
regmach/src/glade/: regmach.glade
regmach/src/schem/: schem.rs  types.rs  wire.rs
src/: colors.rs  lib.rs  linux.rs  linux_display.rs  main.rs  segment.rs  types.rs
src/dsp/: colors.rs  fragment_shaders.rs  linux_display.rs  properties.rs  segment.rs  types.rs  vertex_shaders.rs
src/schem/: schem.rs  stdcell.rs  types.rs  wire.rs
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
wasm/: Cargo.toml  index.html
wasm/src/: lib.rs  start.rs  types.rs  wasm_display.rs
