[package]
name = "regmach"
version = "0.1.0"
authors = ["Derek <physci@gmail.com>"]
edition = "2018"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[dependencies]
lyon = "0.15.3"

[dependencies.sdl2]
version = "0.32.0"
default-features = false
features = ["gfx"]