[package]
name = "browser"
version = "0.1.0"
authors = ["Derek Rhodes"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.35"
wasm-bindgen = "0.2.58"
lazy_static = "1.4.0"
#glm = "0.2.3"
#glm = {git = "https://github.com/drhodes/glm-rs"}
#glm = {path="/home/derek/dev/rust-projects/glm-rs"}
nalgebra-glm = "0.3"
regmach = { path = "../regmach" }


[dependencies.web-sys]
version = "0.3.35"
features = [
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'KeyboardEvent',
  'DomWindowResizeEventDetail',
  'Node',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'console',
  ]

