[package]
name = "browser"
version = "0.1.0"
authors = ["Derek Rhodes"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.35"
wasm-bindgen = "0.2.58"
nalgebra-glm = "0.3"
regmach = { path = "../regmach" }
rusttype = "0.8.2"

[dependencies.web-sys]
version = "0.3.35"
features = [
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'KeyboardEvent',
  'DomWindowResizeEventDetail',
  'Node',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'Event',
  'HtmlDivElement', # for canvas wrapper.
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'console',
  ]

