[package]
name = "linux"
version = "0.1.0"
authors = ["Derek <physci@gmail.com>"]
edition = "2018"

[dependencies]
rusttype = "0.8.2"
lyon = "0.15.3"
lyon_svg = "0.15.0"
rand = "0.7"
regmach = { path = "../regmach" }


[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"



